--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,12 @@
 {
   "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^4.0.3",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.7",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
@@ -20,14 +20,13 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-svelte3": "^3.2.1",
-    "postcss": "^8.3.0",
-    "precss": "^4.0.0",
     "prettier": "^2.4.1",
     "svelte": "^3.37.0",
     "svelte-preprocess": "^4.7.2",
-    "tailwindcss": "^2.1.2",
     "typescript": "^4.2.4",
     "vite": "^2.3.0",
-    "vite-plugin-html": "^2.0.7"
+    "vite-plugin-html": "^2.0.7",
+    "vite-plugin-windicss": "^1.4.12",
+    "windicss": "^3.1.9"
   }
 }
