--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "prettier": "^2.4.1",
     "svelte": "^3.37.0",
     "svelte-preprocess": "^4.7.2",
+    "svelte-windicss-preprocess": "^4.1.0",
     "typescript": "^4.2.4",
     "vite": "^2.3.0",
     "vite-plugin-html": "^2.0.7",
