--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 version: "3"
 services:
   db:
-    image: postgres
+    image: postgres:alpine
     restart: always
     environment:
-      POSTGRES_PASSWORD: example
+      POSTGRES_PASSWORD: "${DB_PASSWORD:?missing DB_PASSWORD}"
+      POSTGRES_USER: "${DB_USER:?missing DB_USER}"
+      POSTGRES_DB: "${DB_DATABASE:?missing DB_DATABASE}"
     ports:
       - 5432:5432
 
