--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.7",
+    "@types/argon2-browser": "^1.18.1",
+    "@types/crypto-js": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "eslint": "^8.0.1",
@@ -30,6 +32,8 @@
     "windicss": "^3.1.9"
   },
   "dependencies": {
+    "argon2-browser": "^1.18.0",
+    "crypto-js": "^4.1.1",
     "svelte-icons": "^2.1.0"
   }
 }
