--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.7",
-    "@types/argon2-browser": "^1.18.1",
-    "@types/crypto-js": "^4.0.2",
+    "@types/libsodium-wrappers": "^0.7.9",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "eslint": "^8.0.1",
@@ -32,8 +31,7 @@
     "windicss": "^3.1.9"
   },
   "dependencies": {
-    "argon2-browser": "^1.18.0",
-    "crypto-js": "^4.1.1",
+    "libsodium-wrappers": "^0.7.9",
     "svelte-icons": "^2.1.0"
   }
 }
