Starting to understand where the problem is

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,16 @@
 {
     "cSpell.words": [
-        "tgbotapi"
+        "ABYTES",
+        "libsodium",
+        "MEMLIMIT",
+        "NONCEBYTES",
+        "OPSLIMIT",
+        "pwhash",
+        "randombytes",
+        "SALTBYTES",
+        "secretbox",
+        "secretstream",
+        "tgbotapi",
+        "xchacha"
     ]
 }
