--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.7",
+    "@types/libsodium-wrappers": "^0.7.9",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "eslint": "^8.0.1",
@@ -30,6 +31,7 @@
     "windicss": "^3.1.9"
   },
   "dependencies": {
+    "libsodium-wrappers": "^0.7.9",
     "svelte-icons": "^2.1.0"
   }
 }
