--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,17 +1,24 @@
 {
-  "version": "1.0.0",
+  "name": "frontend",
   "license": "MIT",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "package": "svelte-kit package",
+    "preview": "svelte-kit preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.7",
+    "@sveltejs/adapter-static": "^1.0.0-next.21",
+    "@sveltejs/kit": "next",
     "@types/libsodium-wrappers": "^0.7.9",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "eslint": "^8.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^14.0.1",
     "eslint-config-prettier": "^8.3.0",
@@ -21,15 +28,19 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "prettier": "^2.4.1",
-    "svelte": "^3.37.0",
-    "svelte-preprocess": "^4.7.2",
-    "svelte-windicss-preprocess": "^4.1.0",
-    "typescript": "^4.2.4",
+    "prettier-plugin-svelte": "^2.4.0",
+    "svelte": "^3.44.0",
+    "svelte-check": "^2.2.6",
+    "svelte-preprocess": "^4.9.4",
+    "svelte-windicss-preprocess": "^4.1.7",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.3",
     "vite": "^2.3.0",
     "vite-plugin-html": "^2.0.7",
-    "vite-plugin-windicss": "^1.4.12",
+    "vite-plugin-windicss": "^1.5.1",
     "windicss": "^3.1.9"
   },
+  "type": "module",
   "dependencies": {
     "libsodium-wrappers": "^0.7.9",
     "svelte-icons": "^2.1.0"
