It works! Just incredibly slow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,14 +19,14 @@ services:
       - 8080:8080
 
   bot-api:
-    image: aiogram/telegram-bot-api:latest
+    build: https://github.com/billy4479/telegram-bot-api.git
     environment:
       TELEGRAM_API_ID: "${TELEGRAM_API_ID:?missing TELEGRAM_API_ID}"
       TELEGRAM_API_HASH: "${TELEGRAM_API_HASH:?missing TELEGRAM_API_HASH}"
       TELEGRAM_LOCAL: "yes"
       TELEGRAM_VERBOSITY: "1"
-    ports:
-      - 8081:8081
+    # ports:
+    #   - 8081:8081
 
   frontend:
     build:
