Backend: add botapifm

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,14 +8,12 @@ services:
       POSTGRES_USER: "${DB_USER:?missing DB_USER}"
       POSTGRES_DB: "${DB_DATABASE:?missing DB_DATABASE}"
 
- bot-api:
-    image: aiogram/telegram-bot-api:latest
+  bot-api:
+    build: https://github.com/billy4479/telegram-bot-api.git
     environment:
       TELEGRAM_API_ID: "${TELEGRAM_API_ID:?missing TELEGRAM_API_ID}"
       TELEGRAM_API_HASH: "${TELEGRAM_API_HASH:?missing TELEGRAM_API_HASH}"
       TELEGRAM_LOCAL: "yes"
-    ports:
-      - 8081:8081
 
   web:
     build:
