--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,33 +13,33 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^1.0.0-next.21",
+    "@sveltejs/adapter-static": "next",
     "@sveltejs/kit": "next",
     "@types/libsodium-wrappers": "^0.7.9",
     "@types/zxcvbn": "^4.4.1",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "prettier": "^2.4.1",
-    "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.9.4",
-    "svelte-windicss-preprocess": "^4.1.7",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-svelte3": "^3.4.0",
+    "prettier": "^2.5.1",
+    "prettier-plugin-svelte": "^2.6.0",
+    "svelte": "^3.46.3",
+    "svelte-check": "^2.4.1",
+    "svelte-preprocess": "^4.10.2",
+    "svelte-windicss-preprocess": "^4.2.5",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3",
-    "vite": "^2.3.0",
-    "vite-plugin-html": "^2.0.7",
-    "vite-plugin-windicss": "^1.5.1",
-    "windicss": "^3.1.9"
+    "typescript": "^4.5.5",
+    "vite": "^2.7.13",
+    "vite-plugin-html": "^3.0.3",
+    "vite-plugin-windicss": "^1.6.3",
+    "windicss": "^3.4.3"
   },
   "type": "module",
   "dependencies": {
