--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@types/zxcvbn": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
+    "autoprefixer": "^10.4.2",
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -28,21 +29,21 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-svelte3": "^3.4.0",
+    "postcss": "^8.4.6",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.6.0",
     "svelte": "^3.46.3",
     "svelte-check": "^2.4.1",
     "svelte-preprocess": "^4.10.2",
-    "svelte-windicss-preprocess": "^4.2.5",
+    "tailwindcss": "^3.0.23",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5",
     "vite": "^2.7.13",
-    "vite-plugin-html": "^3.0.3",
-    "vite-plugin-windicss": "^1.6.3",
-    "windicss": "^3.4.3"
+    "vite-plugin-html": "^3.0.3"
   },
   "type": "module",
   "dependencies": {
+    "daisyui": "^2.0.9",
     "libsodium-wrappers": "^0.7.9",
     "svelte-icons": "^2.1.0",
     "zxcvbn": "^4.4.2"
