--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,6 @@
   "devDependencies": {
     "@sveltejs/adapter-static": "1.0.0-next.38",
     "@sveltejs/kit": "1.0.0-next.403",
-    "@types/libsodium-wrappers": "^0.7.9",
     "@types/zxcvbn": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
@@ -25,6 +24,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
@@ -44,8 +44,8 @@
   },
   "type": "module",
   "dependencies": {
+    "base64-arraybuffer": "^1.0.2",
     "daisyui": "^2.22.0",
-    "libsodium-wrappers": "^0.7.10",
     "svelte-icons": "^2.1.0",
     "zxcvbn": "^4.4.2"
   }
